[PAGOPA-1847] fix cache: fix junit