@@ -7,28 +7,29 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Sort.Direction;
 
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewUser;
+import it.gov.pagopa.bizeventsservice.model.filterandorder.Order.TransactionListOrder;
 
 public class Util {
 	
 	private Util() {}
 	
-	public static List<List<BizEventsViewUser>> getPaginatedList(List<BizEventsViewUser> fullListOfViewUser, int pageSize) {
+	public static List<List<BizEventsViewUser>> getPaginatedList(List<BizEventsViewUser> mergedListByTIDOfViewUser, int pageSize, TransactionListOrder order, Direction direction) {
+		
+		Util.getSortedList(mergedListByTIDOfViewUser, order, direction);		
+        return Util.getPages(mergedListByTIDOfViewUser, pageSize);
+	}
+
+	
+	public static List<BizEventsViewUser> getMergedListByTID(List<BizEventsViewUser> fullListOfViewUser) {
 		Set<String> set = new HashSet<>(fullListOfViewUser.size());
     	// sorting based on the isDebtor field (true first) and then grouping by transactionId (the cart case requires that only one item be taken from those present)
-        List<BizEventsViewUser> mergedListByTIDOfViewUser = fullListOfViewUser.stream()
+		return fullListOfViewUser.stream()
         		.sorted(Comparator.comparing(BizEventsViewUser::getIsDebtor,Comparator.reverseOrder()))
-        		.filter(p -> set.add(p.getTransactionId())).collect(Collectors.toList());
-        
-        // sorting by transactionDate as per business request
-        Collections.sort(mergedListByTIDOfViewUser, 
-        	     Comparator.comparing(BizEventsViewUser::getTransactionDate, 
-        	        Comparator.nullsLast(Comparator.naturalOrder()))
-        	     .reversed());
-        
-        return Util.getPages(mergedListByTIDOfViewUser, pageSize);
+        		.filter(p -> set.add(p.getTransactionId())).toList();
 	}
 	
     public static <T> List<List<T>> getPages(Collection<T> c, Integer pageSize) {
@@ -48,4 +49,26 @@ public class Util {
         }
         return pages;
     }
+    
+	private static void getSortedList(List<BizEventsViewUser> mergedListByTIDOfViewUser, TransactionListOrder order,
+			Direction direction) {
+		if (TransactionListOrder.TRANSACTION_DATE.equals(order)) {
+			switch (direction) {
+			case ASC:
+				Collections.sort(mergedListByTIDOfViewUser, Comparator.comparing(BizEventsViewUser::getTransactionDate,
+						Comparator.nullsLast(Comparator.naturalOrder())));
+				break;
+			case DESC:
+			default:
+				Collections.sort(mergedListByTIDOfViewUser, Comparator.comparing(BizEventsViewUser::getTransactionDate,
+						Comparator.nullsLast(Comparator.naturalOrder())).reversed());
+				break;
+			}
+		} else {
+			// the default sorting is by transaction date and DESC direction
+			Collections.sort(mergedListByTIDOfViewUser, Comparator
+					.comparing(BizEventsViewUser::getTransactionDate, Comparator.nullsLast(Comparator.naturalOrder()))
+					.reversed());
+		}
+	}
 }
